syntax = "proto3";

package vertis.validation.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_multiple_files = true;

import "options.proto";
import "validation.proto";
import "test_options.proto";
import "test.proto";


message CompositeMessage {
    string name = 1;
    string id = 2 [(is_optional) = true];

    string classified = 3 [ (is_classified) = true];
    string source = 4 [ (is_source) = true];

    string color = 5 [(verba_check) = "auto/color-stock"];
    string value = 6 [(verba_check) = "auto/${COLOR}"];
}
